# One-Fifth-Racer

./: README.md  waypoints_data.txt
GPS_Package/: README.md
GPS_Package/gps_datum_pub/launch/: gps_datum.launch
GPS_Package/gps_datum_pub/src/: gps_datum_pub.cpp
GPS_Package/gps_msgs_package/launch/: gps_msgs_package.launch
GPS_Package/gps_msgs_package/src/: gps_msgs_package.cpp
GPS_Package/gps_odom/launch/: gps_odom.launch
GPS_Package/gps_odom/scripts/: get_imu_rpy.py
GPS_Package/gps_odom/src/: odom_path_node1.py  utm_odom.cpp
GPS_Package/gps_package_launch/launch/: gps_pack.launch
GPS_Package/waypoint_rviz_display/launch/: waypoints_display.launch
GPS_Package/waypoint_rviz_display/rviz/: waypoint_display.rviz
GPS_Package/waypoint_rviz_display/scripts/: utm_odom_path_node.py
GPS_Package/waypoint_rviz_display/src/: waypoints_rviz_display.cpp
Gazebo_Simul_Package/: README.md
Gazebo_Simul_Package/one_fifth_gazebo_sim/gps_two_publiser/: CMakeLists.txt  package.xml
Gazebo_Simul_Package/uni_car/launch/: mando_race.launch
Waypoint_Control/auto_waypoints/: CMakeLists.txt  package.xml
Waypoint_Control/lidar_obstacle_detect/: CMakeLists.txt  package.xml
Waypoint_Control/m_car_encoder/: CMakeLists.txt  package.xml
Waypoint_Control/m_car_encoder/launch/: henes_car_control_odom.launch
Waypoint_Control/m_car_encoder/src/: henes_car_control_node.cpp  odom_path_node1.py  odom_path_node2.py  teleop.py
Waypoint_Control/robot_yaw_control/: CMakeLists.txt
Waypoint_Control/waypoint_car_steering_control/: CMakeLists.txt
(+17 files in other folders)
